Calendar Day List improvements: * The Day List functions are only shown in the bar if the Day List is being shown. * The Add button presets the date in the Form. * Every hour in the list has its own Add button, that presets the date, start time and end time in the form. * JS function 'htmlEntities' created, which permits showing special HTML tags and code into readable HTML entities, inside the list. It means that an event title or note now works fine if it contains special characters like '<', '>', etc. This function should be also implemented in all the grids of the site. * IE aesthetical fixes.

--- a/phprojekt/htdocs/css/themes/phprojekt/Calendar.css
+++ b/phprojekt/htdocs/css/themes/phprojekt/Calendar.css
@@ -162,6 +162,7 @@
     text-align: center;
     background-color: #d4dfea;
     font-size: 10px;
+    border-color: black;
 }
 
 .phprojekt #calendarSchedule .events {
@@ -169,6 +170,7 @@
     padding: 4;
     vertical-align: middle;
     background-color: #DDDDDD;
+    border-color: black;
 }
 
 .phprojekt #calendarSchedule .horizontalLine {
@@ -188,4 +190,8 @@
 .phprojekt #calendarButtonBar a:hover,
 .phprojekt #calendarButtonBar a:active {
     text-decoration: underline;
+}
+
+.phprojekt #calendarSchedule table {
+    border-collapse: collapse;
 }
